[package]
name = "pallet-doughnut"
version = "1.0.0"
authors = ["The Root Network Team"]
edition = "2021"
repository = "https://github.com/futureversecom/seed"
description = "Root Network Doughnut pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
hex-literal = "0.3.4"
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v1.0.0", default-features = false, optional = true }
doughnut-rs = { version = "0.2.2", default-features = false, features = ["crypto"] }

seed-pallet-common = { path = "../common", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
fp-self-contained = { git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-evm = { git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-fee-control = { path = "../fee-control" }
pallet-fee-proxy = { path = "../fee-proxy" }
pallet-dex = { path = "../dex" }
pallet-assets-ext = { path = "../assets-ext" }
pallet-futurepass = { path = "../futurepass" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"frame-benchmarking/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"doughnut-rs/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
