[package]
name = "pallet-doughnut"
version = "1.0.0"
description = "Root Network Doughnut pallet"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
hex-literal = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }

seed-pallet-common = { workspace = true }
seed-primitives = { workspace = true }
doughnut-rs = { workspace = true, features = ["crypto"] }

[dev-dependencies]
frame-executive = { workspace = true }
fp-self-contained = { workspace = true, default-features = true }
pallet-fee-control = { workspace = true }
pallet-assets-ext = { workspace = true }
pallet-futurepass = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"doughnut-rs/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
