[package]
name = "pallet-echo"
version = "1.0.0"
authors = ["The Root Network Team"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/futureversecom/seed"
description = "Root Network Echo pallet"

[dependencies]
seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }

codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
ethabi = { version = "17.1.0", default-features = false}

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", optional = true, default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[features]
default = ["std"]
std = [
    "codec/std",
    "ethabi/std",
    "scale-info/std",
    "seed-primitives/std",
    "seed-pallet-common/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]