[package]
name = "pallet-erc20-peg"
version = "2.0.1"
description = "Seed Token Approvals module"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
ethabi = { workspace = true }
log = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

seed-primitives = { workspace = true }
seed-pallet-common = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
hex-literal = { workspace = true }
pallet-assets-ext = { workspace = true, default-features = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }

[features]
default = ["std"]
std = [
    "seed-primitives/std",
    "seed-pallet-common/std",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "ethabi/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]