[package]
name = "pallet-ethy"
version = "1.0.1"
edition = "2021"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Pallet for bridging Ethereum events"
license = "GPL-3.0"

[dependencies]
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
ethabi = { version = "17.1.0", default-features = false}
ethereum-types = { version = "0.13.1", default-features = false, features = ["serialize", "codec"] }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }

seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-application-crypto = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
parking_lot = "0.12.1"
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
pallet-assets-ext = { path = "../assets-ext" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
pallet-assets = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
pallet-scheduler = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum-types/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde_json/std",
	"frame-support/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-primitives/std",
	"seed-pallet-common/std",
]
