[package]
name = "pallet-evm-chain-id"
version = "1.0.0-dev"
authors = ["The Root Network Team"]
edition = "2021"
license = "GPL-3.0"
description = "EVM chain id storage pallet"
repository = "https://github.com/futureversecom/seed"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"], optional = true }

# Parity
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate FRAME
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", optional = true, default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[features]
default = ["std"]
std = [
	"serde",
	# Parity
	"codec/std",
	"scale-info/std",
	# Substrate FRAME
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
