[package]
name = "pallet-evm-chain-id"
version = "1.0.0-dev"
description = "EVM chain id storage pallet"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }
seed-pallet-common = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"frame-benchmarking?/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
