[package]
name = "pallet-fee-control"
version = "1.0.0"
description = "Static and dynamic fee setting through a pallet"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

fp-evm = { workspace = true }

seed-primitives = { workspace = true }
seed-pallet-common = { workspace = true }
precompile-utils = { workspace = true }

[dev-dependencies]
pallet-evm = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-fee-proxy = { workspace = true, default-features = true }
pallet-dex = { workspace = true }
pallet-assets-ext = { workspace = true }
pallet-futurepass = { workspace = true }
pallet-sylo = { workspace = true }
seed-pallet-common= { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"precompile-utils/std",
	"sp-core/std",
	"fp-evm/std",
	"frame-benchmarking?/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
