[package]
name = "pallet-fee-oracle"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"
repository = "https://github.com/futureversecom/seed"
description = "Static and dynamic fee setting through a pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
frame-system = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
pallet-assets = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
sp-std = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
sp-core = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
frame-benchmarking = { git = 'https://github.com/futureversecom/substrate.git', branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }

seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }
precompile-utils = { path = "../../evm-precompiles/utils", default-features = false }

log = "0.4.0"

[dev-dependencies]
pallet-evm = { git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }

sp-io = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.27-debug" }
pallet-assets = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
pallet-timestamp = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
pallet-transaction-payment = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-fee-proxy = { path = "../fee-proxy" }
pallet-dex = { path = "../dex" }
pallet-assets-ext = { path = "../assets-ext" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-pallet-common/std",
	"seed-primitives/std",
	"precompile-utils/std",
	"sp-core/std",
	"fp-evm/std",
	"frame-benchmarking/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
