[package]
name = "pallet-fee-proxy"
version = "0.1.0"
authors = ["The Root Network Team"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/futureversecom/seed"
description = "Root Network Fee Proxy Pallet"

[dependencies]
seed-primitives = { path = "../../primitives", default-features = false }
seed-pallet-common = { path = "../common", default-features = false }
pallet-assets-ext = { path = "../assets-ext", default-features = false }
pallet-dex = { path = "../dex", default-features = false }
precompile-utils = { path = "../../evm-precompiles/utils", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
ethabi = { version = "17.1.0", default-features = false }

sp-std = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-benchmarking = { git = "https://github.com/futureversecom/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-transaction-payment = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27", default-features = false }

pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN" }

[dev-dependencies]
sp-io = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
hex-literal = { version = "0.3.4" }
pallet-balances = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
pallet-assets = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }
pallet-timestamp = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
    "codec/std",
    "ethabi/std",
    "precompile-utils/std",
    "pallet-assets-ext/std",
    "pallet-evm/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "seed-primitives/std",
    "seed-pallet-common/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
