[package]
name = "pallet-fee-proxy"
version = "0.1.0"
description = "Root Network Fee Proxy Pallet"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
ethabi = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

pallet-evm = { workspace = true }
pallet-assets-ext = { workspace = true }
pallet-dex = { workspace = true }
pallet-futurepass = { workspace = true }
pallet-transaction-payment = { workspace = true }
precompile-utils = { workspace = true }

seed-primitives = { workspace = true }
seed-pallet-common = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-fee-control = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "ethabi/std",
    "precompile-utils/std",
    "pallet-assets-ext/std",
    "pallet-futurepass/std",
    "pallet-evm/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "seed-primitives/std",
    "seed-pallet-common/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
